# JobBot

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  cleanup.sh  prepare_clang_build.sh  prepare_gcc_build.sh  run_tests.sh
source/: Job.cpp  Job.h  JobExceptions.cpp  JobExceptions.h  Manager.cpp  Manager.h  Utility.h  Worker.cpp  Worker.h
tests/: job_tests.cpp  manager_tests.cpp
